ui/tui/src/render/snapshots/hub_tui__render__tests__full_screen_unified_list_narrow_terminal.snap
---
source: ui/tui/src/render/mod.rs
expression: screen_text(&buf)
---
╭ All ─────────────────────────────────╮
│● check                               │
│  / fmt                               │
│  ·                                   │
│  failed                              │
│  —                                   │
│  ooloth                              │
│  /hub  ↩ to open · i to investigate  │
╰──────────────────────────────────────╯
1/1 · Press ↩ to open https://github.com
