ui/tui/src/render/snapshots/hub_tui__render__tests__full_screen_unified_list_query_input.snap
---
source: ui/tui/src/render/mod.rs
expression: screen_text(&buf)
---
╭ "hub" ───────────────────────────────────────────────────────────────────────╮
│● CI · check / fmt · failed                                   ooloth/hub · now│
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
╰──────────────────────────────────────────────────────────────────────────────╯
1/1 · Press ↩ to open https://github.com/ooloth/hub/actions/runs/25608685802 · P
