ui/tui/src/render/snapshots/hub_tui__render__tests__full_screen_unified_list_scrolled.snap
---
source: ui/tui/src/render/mod.rs
expression: screen_text(&buf)
---
╭ All ─────────────────────────────────────────────────────────────────────────╮
│● Fix [TO REVIEW] (#1) — owner/repo                                           │
│● Fix [TO REVIEW] (#1) — owner/repo                                           │
│● Fix [TO REVIEW] (#1) — owner/repo                                           │
│● Fix [TO REVIEW] (#1) — owner/repo                                           │
│● Fix [TO REVIEW] (#1) — owner/repo                                           │
│● Fix [TO REVIEW] (#1) — owner/repo                                           │
│● Fix [TO REVIEW] (#1) — owner/repo                                           │
│● Fix [TO REVIEW] (#1) — owner/repo                                           │
│● Fix [TO REVIEW] (#1) — owner/repo                                           │
│● Fix [TO REVIEW] (#1) — owner/repo                                           │
│● Fix [TO REVIEW] (#1) — owner/repo                                           │
│● Fix [TO REVIEW] (#1) — owner/repo  ↩ to open                                │
╰──────────────────────────────────────────────────────────────────────────────╯
15/15 · Press ↩ to open https://github.com/owner/repo/pull/1
