ui/tui/src/render/snapshots/hub_tui__render__tests__full_screen_unified_list_task_status_submenu_backlog.snap
---
source: ui/tui/src/render/mod.rs
expression: screen_text(&buf)
---
╭ All ─────────────────────────────────────────────────────────────────────────╮
│Agent · TASK-0001 · Implement feature X backlog · implement                now│
╰──────────────────────────────────────────────────────────────────────────────╯
╭───────────────────────────────────────────────┬──────────────────────────────╮
│No session data yet.                           │ TASK-0001 · Implement feature│
│                                               │                              │
│                                               │ status  backlog              │
│                                               │ kind    implement            │
│                                               │                              │
│                                               │ age     now                  │
│                                               │                              │
│                                               │                              │
│                                               │                              │
╰───────────────────────────────────────────────┴──────────────────────────────╯
 TASK-0001 · status  [l] blocked · [c] cancelled · [d] done · [i] in-progress ·
