ui/tui/src/render/snapshots/hub_tui__render__tests__full_screen_unified_list_task_status_submenu_done.snap
---
source: ui/tui/src/render/mod.rs
expression: screen_text(&buf)
---
╭ All ─────────────────────────────────────────────────────────────────────────╮
│Agent · TASK-0001 · Implement feature X done · implement                   now│
╰──────────────────────────────────────────────────────────────────────────────╯
╭───────────────────────────────────────────────┬──────────────────────────────╮
│No session data yet.                           │ TASK-0001 · Implement feature│
│                                               │                              │
│                                               │ status  done                 │
│                                               │ kind    implement            │
│                                               │                              │
│                                               │ created                      │
│                                               │ updated                      │
│                                               │ age     now                  │
│                                               │                              │
╰───────────────────────────────────────────────┴──────────────────────────────╯
 TASK-0001 · status  [b] backlog · [l] blocked · [c] cancelled · [f] failed · [
