ui/tui/src/render/snapshots/hub_tui__render__tests__full_screen_unified_list_task_status_submenu_review.snap
---
source: ui/tui/src/render/mod.rs
expression: screen_text(&buf)
---
╭ All ─────────────────────────────────────────────────────────────────────────╮
│Agent · TASK-0001 · Implement feature X in-review · implement              now│
╰──────────────────────────────────────────────────────────────────────────────╯
╭───────────────────────────────────────────────┬──────────────────────────────╮
│No session data yet.                           │ TASK-0001 · Implement feature│
│                                               │                              │
│                                               │ status  in-review            │
│                                               │ kind    implement            │
│                                               │                              │
│                                               │ age     now                  │
│                                               │                              │
│                                               │                              │
│                                               │                              │
╰───────────────────────────────────────────────┴──────────────────────────────╯
 TASK-0001 · status  [b] backlog · [l] blocked · [c] cancelled · [d] done · [f]
