ui/tui/src/render/snapshots/hub_tui__render__tests__fullscreen_list_after_esc_from_split_view.snap
---
source: ui/tui/src/render/mod.rs
expression: screen_text(&buf)
---
╭ All ─────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│PR · Fix #1 · alice · no reviews                                                                      owner/repo · now│
├──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┤
│CI · check / fmt · failed                                                                             ooloth/hub · now│
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
 1/2 · [↩] read · [i] investigate
