ui/tui/src/render/snapshots/hub_tui__render__tests__split_view_issue_selected.snap
---
source: ui/tui/src/render/mod.rs
expression: screen_text(&buf)
---
╭ All ─────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│Issue · Fix logging in production #42 · status:needs-human-review                                     ooloth/hub · now│
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
╭ Fix logging in production ───────────────────────────────────────────────────────────────────────── ooloth/hub · #42 ╮
│                                                                                                                      │
│This is the issue body.                                                                                               │
│                                                                                                                      │
│It has multiple paragraphs.                                                                                           │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
╰ status:needs-human-review ───────────────────────────────────────────────────────────────────────────── @agent · now ╯
 1/1 · [o] open · [w] dismiss · [a] approve · [i] investigate · [Esc] back
