ui/tui/src/render/snapshots/hub_tui__render__tests__split_view_multi_urgency_tiers.snap
---
source: ui/tui/src/render/mod.rs
expression: screen_text(&buf)
---
╭ All ─────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│PR · Fix #1 · alice · no reviews                                                                      owner/repo · now│
├──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┤
│PR · Fix #1 · alice · no reviews                                                                      owner/repo · now│
│PR · Fix #1 · alice · no reviews                                                                      owner/repo · now│
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
╭───────────────────────────────────────────────────────────────────────┬──────────────────────────────────────────────╮
│(no description)                                                       │ checks     (none)                            │
│                                                                       │ status     0 reviews                         │
│                                                                       │ comments   0 comments                        │
│                                                                       │ diff       +0 −0 in 0 files                  │
│                                                                       │ author     @alice                            │
│                                                                       │ updated    now ago                           │
│                                                                       │ repo       owner/repo                        │
│                                                                       │ branch     feat/fix                          │
│                                                                       │                                              │
│                                                                       │                                              │
│                                                                       │                                              │
│                                                                       │                                              │
│                                                                       │                                              │
│                                                                       │                                              │
│                                                                       │                                              │
│                                                                       │                                              │
│                                                                       │                                              │
│                                                                       │                                              │
│                                                                       │                                              │
│                                                                       │                                              │
│                                                                       │                                              │
│                                                                       │                                              │
│                                                                       │                                              │
│                                                                       │                                              │
│                                                                       │                                              │
│                                                                       │                                              │
│                                                                       │                                              │
│                                                                       │                                              │
│                                                                       │                                              │
│                                                                       │                                              │
│                                                                       │                                              │
╰───────────────────────────────────────────────────────────────────────┴──────────────────────────────────────────────╯
 1/3 · [o] open · [d] diff · [v] review · [m] merge · [i] ask · [Esc] back
