ui/tui/src/render/snapshots/hub_tui__render__tests__split_view_narrow_terminal.snap
---
source: ui/tui/src/render/mod.rs
expression: screen_text(&buf)
---
╭ All ─────────────────────────────────────────────────────────────────────────╮
│PR · Fix #1 · alice · no reviews                              owner/repo · now│
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
╰──────────────────────────────────────────────────────────────────────────────╯
╭ #1 · Fix ────────────────────────────────────────────────────── @alice · now ╮
│                                                                              │
│(no description)                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
╰ 0 reviews ─────────────────────────────────────────────────────── owner/repo ╯
 1/1 · [↩] read · [i] investigate
